# ServionX-Browser

./: .gitignore  index.html  package-lock.json  package.json
.github/workflows/: build.yml
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: test_privacy.rs
src-tauri/src/: lib.rs  main.rs
src-tauri/src/browser/: commands.rs  mod.rs
src-tauri/src/downloads/: commands.rs  mod.rs  smart_downloader.rs  video_grabber.rs
src-tauri/src/input/: commands.rs  mod.rs
src-tauri/src/metadata/: commands.rs  document_stripper.rs  mod.rs  upload_protection.rs
src-tauri/src/privacy/: additional_protection.rs  advanced_fingerprint.rs  blocklist_manager.rs  commands.rs  complete_fake_data.rs  expanded_blocklist.rs  fingerprint.rs  fingerprint_detector.rs  font_fingerprint.rs  geolocation.rs  https_enforcer.rs  ip_privacy.rs  malware_blocker.rs  mod.rs  referrer_control.rs  storage_partitioner.rs  tracker_blocker.rs  ultimate_protection.rs  user_agent.rs  whitelist.rs
src-tauri/src/security/: certificate_transparency.rs  commands.rs  download_manager.rs  encryption.rs  live_logs.rs  mod.rs  network_security.rs  profile.rs  tor_manager.rs  vulnerability_scanner.rs
src-tauri/src/settings/: commands.rs  mod.rs
src-tauri/src/tools/: commands.rs  mod.rs  network.rs  ssh.rs
src/components/: BrowserChrome.tsx  DownloadManager.tsx  DownloadPanel.tsx  ITToolsPanel.tsx  NewTabPage.tsx  SettingsPanel.tsx  VirtualKeyboard.tsx
src/lib/: types.ts
